--- a/public/css/app.css
+++ b/public/css/app.css
@@ -973,6 +973,9 @@ input:checked + .toggle-bg {
   white-space: nowrap;
   border-width: 0;
 }
+.pointer-events-none {
+  pointer-events: none;
+}
 .visible {
   visibility: visible;
 }
@@ -996,6 +999,9 @@ input:checked + .toggle-bg {
 }
 .inset-0 {
   inset: 0px;
+}
+.inset-px {
+  inset: 1px;
 }
 .bottom-0 {
   bottom: 0px;
@@ -1083,6 +1089,9 @@ input:checked + .toggle-bg {
 }
 .mb-4 {
   margin-bottom: 1rem;
+}
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 .mb-6 {
   margin-bottom: 1.5rem;
@@ -1281,6 +1290,9 @@ input:checked + .toggle-bg {
 .max-w-\[12rem\] {
   max-width: 12rem;
 }
+.max-w-lg {
+  max-width: 32rem;
+}
 .max-w-sm {
   max-width: 24rem;
 }
@@ -1304,6 +1316,9 @@ input:checked + .toggle-bg {
 }
 .flex-grow {
   flex-grow: 1;
+}
+.border-collapse {
+  border-collapse: collapse;
 }
 .origin-top {
   transform-origin: top;
@@ -1423,6 +1438,13 @@ input:checked + .toggle-bg {
 .gap-4 {
   gap: 1rem;
 }
+.gap-x-6 {
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
+}
+.gap-y-6 {
+  row-gap: 1.5rem;
+}
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -1490,11 +1512,17 @@ input:checked + .toggle-bg {
 .whitespace-nowrap {
   white-space: nowrap;
 }
+.text-balance {
+  text-wrap: balance;
+}
 .break-all {
   word-break: break-all;
 }
 .rounded {
   border-radius: 0.25rem;
+}
+.rounded-\[calc\(var\(--radius-lg\)\+1px\)\] {
+  border-radius: calc(var(--radius-lg) + 1px);
 }
 .rounded-full {
   border-radius: 9999px;
@@ -1746,6 +1774,10 @@ input:checked + .toggle-bg {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
 .py-0 {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -1846,6 +1878,10 @@ input:checked + .toggle-bg {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1857,6 +1893,10 @@ input:checked + .toggle-bg {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+.text-sm\/6 {
+  font-size: 0.875rem;
+  line-height: 1.5rem;
 }
 .text-xl {
   font-size: 1.25rem;
@@ -1895,6 +1935,9 @@ input:checked + .toggle-bg {
 }
 .leading-tight {
   line-height: 1.25;
+}
+.tracking-tight {
+  letter-spacing: -0.025em;
 }
 .tracking-wider {
   letter-spacing: 0.05em;
@@ -1937,6 +1980,10 @@ input:checked + .toggle-bg {
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity, 1));
+}
+.text-gray-950 {
+  --tw-text-opacity: 1;
+  color: rgb(3 7 18 / var(--tw-text-opacity, 1));
 }
 .text-green-600 {
   --tw-text-opacity: 1;
@@ -2023,6 +2070,9 @@ input:checked + .toggle-bg {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(0 0 0 / var(--tw-ring-opacity, 1));
 }
+.ring-black\/5 {
+  --tw-ring-color: rgb(0 0 0 / 0.05);
+}
 .ring-gray-300 {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity, 1));
@@ -2074,6 +2124,14 @@ input:checked + .toggle-bg {
 }
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+.odd\:bg-white:nth-child(odd) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+.even\:bg-gray-50:nth-child(even) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1));
 }
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
@@ -2503,7 +2561,23 @@ input:checked + .toggle-bg {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
+@media not all and (min-width: 1024px) {
+  .max-lg\:rounded-b-\[2rem\] {
+    border-bottom-right-radius: 2rem;
+    border-bottom-left-radius: 2rem;
+  }
+  .max-lg\:rounded-b-\[calc\(2rem\+1px\)\] {
+    border-bottom-right-radius: calc(2rem + 1px);
+    border-bottom-left-radius: calc(2rem + 1px);
+  }
+  .max-lg\:text-center {
+    text-align: center;
+  }
+}
 @media (min-width: 640px) {
+  .sm\:col-span-1 {
+    grid-column: span 1 / span 1;
+  }
   .sm\:col-span-2 {
     grid-column: span 2 / span 2;
   }
@@ -2565,12 +2639,30 @@ input:checked + .toggle-bg {
   .sm\:p-5 {
     padding: 1.25rem;
   }
+  .sm\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
+  .sm\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+  .sm\:pb-0 {
+    padding-bottom: 0px;
+  }
   .sm\:pt-0 {
     padding-top: 0px;
+  }
+  .sm\:pt-2 {
+    padding-top: 0.5rem;
+  }
+  .sm\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 }
 @media (min-width: 768px) {
@@ -2631,6 +2723,28 @@ input:checked + .toggle-bg {
   }
   .lg\:flex {
     display: flex;
+  }
+  .lg\:max-w-7xl {
+    max-width: 80rem;
+  }
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .lg\:rounded-l-\[2rem\] {
+    border-top-left-radius: 2rem;
+    border-bottom-left-radius: 2rem;
+  }
+  .lg\:rounded-l-\[calc\(2rem\+1px\)\] {
+    border-top-left-radius: calc(2rem + 1px);
+    border-bottom-left-radius: calc(2rem + 1px);
+  }
+  .lg\:rounded-r-\[2rem\] {
+    border-top-right-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+  }
+  .lg\:rounded-r-\[calc\(2rem\+1px\)\] {
+    border-top-right-radius: calc(2rem + 1px);
+    border-bottom-right-radius: calc(2rem + 1px);
   }
   .lg\:px-8 {
     padding-left: 2rem;
